继续更新完善平台，薪资管理中的手机号改为用户编码了了

--- a/QJY.WEB/ViewV5/AppPage/XMGL/XMGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/XMGL/XMGLVIEW.html
@@ -32,10 +32,10 @@
                     <span class="item-tit">{{el.ColText}}</span>
                     <div class="item-con">{{ComFunJS.FnFormat(modelData[el.ColName],el)|html}}</div>
                 </div>
-                <!--<div class="detail-item" ms-repeat-ext="modelData.SubExt">
+                <div class="detail-item" ms-repeat-ext="modelData.SubExt">
                     <span class="item-tit">{{ext.TableFiledName}}</span>
                     <div class="item-con">{{ext.ExtendDataValue}} </div>
-                </div>-->
+                </div>
                 <div class="detail-item" ms-if="tpData&&tpData.size()!=0">
                     <span class="item-tit">附件</span>
                     <div class="fj clearfix mt10">
