--- a/QJY.WEB/ViewV5/AppPage/XZGL/FFJLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/FFJLVIEW.html
@@ -46,7 +46,7 @@
                         <tr>
                             <th rowspan="2" class="tc">人员</th>
                             <th rowspan="2" class="tc">部门</th>
-                            <th rowspan="2" class="tc">手机</th>
+                            <th rowspan="2" class="tc">用户编码</th>
                             <th ms-attr-colspan="colnum(lmData.YF)" class="tc">
                                 <div class="input-box">
                                     应发
@@ -86,7 +86,7 @@
                             </td>
                             <td>
                                 <div class="input-box">
-                                    {{el.手机}}
+                                    {{el.用户编码}}
                                 </div>
                             </td>
                             <td ms-repeat="el.YF">
