--- a/QJY.WEB/ViewV5/AppPage/XZGL/XZGLLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/XZGLLIST.html
@@ -173,7 +173,7 @@
                                     <td>{{YLBM}}</td>
                                 </tr>
                                 <tr>
-                                    <td class="output-key">手机</td>
+                                    <td class="output-key">用户编码</td>
                                     <td>{{YLTel}}</td>
                                 </tr>
                                 <tr>
@@ -240,7 +240,7 @@
             item1 = JSON.parse(item.salaryData);
             tempindex.YLName = item1.姓名;
             tempindex.YLBM = item1.部门;
-            tempindex.YLTel = item1.手机;
+            tempindex.YLTel = item1.用户编码;
             tempindex.YLHJ = item1.合计;
             tempindex.YFData = item1.YF;
             tempindex.YKData = item1.YK;
