--- a/QJY.WEB/ViewV5/AppPage/XZGL/XZGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/XZGLVIEW.html
@@ -69,8 +69,8 @@
                                     <td>{{ctData.部门}}</td>
                                 </tr>
                                 <tr>
-                                    <td class="output-key">手机</td>
-                                    <td>{{ctData.手机}}</td>
+                                    <td class="output-key">用户编码</td>
+                                    <td>{{ctData.用户编码}}</td>
                                 </tr>
                                 <tr>
                                     <td class="output-key">合计</td>
