--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -182,7 +182,7 @@
             <h1 class='title'>{{pmtitle}}</h1>
         </header>-->
         <div class="content">
-            <div ms-include-src="/View_Mobile/UI/TEMP/MODEL/M{{FormCode}}.html?ver={{rdm}}" data-include-rendered='render' ms-css-padding-bottom="MobileWFData.size()>0?'0':'44px'"></div>
+            <div ms-include-src="/View_Mobile/UI/TEMP/MODEL/M{{FormCode}}.html?ver={{rdm}}" data-include-rendered='render'></div>
 
             <div id="extdiv" class="weui_cells">
                 <div ms-if="ExtData.size()>0&&isHasDataQX=='Y'">
