--- a/QJY.WEB/View_Mobile/UI/UI_RWGL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_RWGL_LIST.html
@@ -224,7 +224,7 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20180425"></script>
     <script>
@@ -469,8 +469,7 @@
                     })//左右滑动事件
             }
             model.getdata(model.type);
-            //初始化微信配置
-            // ComFunJS.initwxConfig();
+         
         })
     </script>
 </body>
