--- a/QJY.WEB/View_Mobile/UI/UI_SWWH_INDEX.html
+++ b/QJY.WEB/View_Mobile/UI/UI_SWWH_INDEX.html
@@ -10,7 +10,7 @@
     <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script src="/View_Mobile/JS/zepto.min.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
 
     <script>
 
