--- a/QJY.WEB/View_Mobile/UI/RLZY/list.html
+++ b/QJY.WEB/View_Mobile/UI/RLZY/list.html
@@ -88,7 +88,7 @@
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
 
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
