--- a/QJY.WEB/View_Mobile/UI/UI_PERSON.html
+++ b/QJY.WEB/View_Mobile/UI/UI_PERSON.html
@@ -8,7 +8,7 @@
     <script src="/View_Mobile/JS/zepto.min.js"></script>
     <script src="/View_Mobile/Frozenui1.3/js/frozen.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
 
     <script>
         //document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {
