--- a/QJY.WEB/View_Mobile/UI/UI_QYTXL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYTXL_LIST.html
@@ -209,7 +209,7 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/jquery.charfirst.pinyin.js"></script>
     <script src="/View_Mobile/JS/sort.js"></script>
     <script>
