--- a/QJY.WEB/View_Mobile/UI/UI_USERINFO.html
+++ b/QJY.WEB/View_Mobile/UI/UI_USERINFO.html
@@ -11,7 +11,7 @@
     <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script src="/View_Mobile/JS/zepto.min.js"></script>
     <script src="/View_Mobile/Frozenui1.3/js/frozen.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
 
     <script>
