--- a/QJY.WEB/View_Mobile/UI/UI_WQQD_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_WQQD_LIST.html
@@ -153,7 +153,7 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="http://res.wx.qq.com/open/js/jweixin-1.1.0.js"></script>
     <script src="/View_Mobile/JS/touch/toucher.js"></script>
-    <script src="/View_Mobile/JS/avalon.mobile.min.js"></script>
+    <script src="/View_Mobile/JS/avalon1.47.js"></script>
     <script src="/View_Mobile/JS/ComFunJS.js?jsver=20160425"></script>
     <script>
 
