--- a/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGX.html
+++ b/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGX.html
@@ -66,8 +66,9 @@
 
 
             .folder-list li:hover {
-                background-color: #23c6c8;
+                background-color: #12b8f6;
                 border-radius: 2px;
+                COLOR: #f5f5f5;
             }
 
     .foldersel {
@@ -114,8 +115,8 @@
         <div class="default-tab ft14" ms-if="showtype=='1'">
             <table class="table table-hover">
                 <caption style="padding-left: 12px; color: cornflowerblue">
-                    已选中{{tempindex.SelItemData.size()}} 
-            <button type="button" class="btn btn-info" ms-click="downloaditem()" style="margin-left: 5PX"><i class="iconfont icon-xiazai ft12 mr5"></i>下载</button>
+                    已选中{{tempindex.SelItemData.size()}}
+                    <button type="button" class="btn btn-info" ms-click="downloaditem()" style="margin-left: 5PX"><i class="iconfont icon-xiazai ft12 mr5"></i>下载</button>
                 </caption>
                 <thead>
 
