--- a/QJY.WEB/ViewV5/AppPage/QYWD/Share.html
+++ b/QJY.WEB/ViewV5/AppPage/QYWD/Share.html
@@ -158,7 +158,7 @@
     <nav class="navbar navbar-inverse box-shadow" style="border-radius: 0; background-color: #fff; border-color: #fff; " ms-if="!ErrMsg" ms-if="isShowFile">
         <div class="head-center clearfix c2">
             <div class="logo c666 pull-left">
-                <img onerror="javascript: this.src = 'images/logo.png'" style="max-height: 40px; margin-right: 10px;" ms-attr-src="{{ComFunJS.getfile(ShareInfo.LogoID)}}">{{ShareInfo.QYName}}
+                <img onerror="javascript: this.src = '/ViewV5/images/logo.png'" style="max-height: 40px; margin-right: 10px;" ms-attr-src="{{ComFunJS.getfile(ShareInfo.LogoID)}}">{{ShareInfo.QYName}}
             </div>
         </div>
     </nav>
