--- a/QJY.WEB/View_Mobile/UI/UI_TSSQ_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_TSSQ_LIST.html
@@ -74,10 +74,15 @@
                                             </div>
                                             <div class="toggle-text" ms-if="!el.URL" ms-click="showdetil(el)">{{el.isfold?'全文':'收起'}}</div>
                                             <div class="pictur" ms-if="!el.URL">
-                                                <span ms-repeat-file="el.FileList">
-                                                    <img ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" style="height:auto" />
-                                                    <!--<span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}</span>-->
-                                                </span>
+                                                <ul class="filelist" style="margin-left:0;padding-left:0">
+                                                    <li ms-repeat-file="el.FileList">
+                                                        <img ms-if="ComFunJS.isPic(file.FileExtendName)" ms-class="mall_pcp:ComFunJS.isPic(file.FileExtendName)" class="" ms-on-click="viewfile(file)" ms-src="{{ComFunJS.getfile(file.ID)}}" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'">
+                                                        <img ms-if="!ComFunJS.isPic(file.FileExtendName)" class="file" ms-on-click="viewfile(file)" ms-attr-src="/ViewV5/images/qywd/{{file.FileExtendName}}.png" onerror="javascript: this.src = '/ViewV5/images/qywd/file.png'" />
+
+                                                        <span class="fileinfo" ms-if="!ComFunJS.isPic(file.FileExtendName)">{{file.Name}}.{{file.FileExtendName}}</span>
+                                                    </li>
+                                                </ul>
+
                                             </div>
                                             <div class="lj" ms-click="viewxxurl(el)" ms-if="el.URL">
                                                 <img ms-visible="el.FileList.size()>0" ms-src="{{ComFunJS.getfile(el.FileList[0].ID)}}" onerror="javascript: this.src = '/View_Mobile/Images/lg.png'">
