--- a/QJY.WEB/ViewV5/AppPage/XZGL/XZFF.html
+++ b/QJY.WEB/ViewV5/AppPage/XZGL/XZFF.html
@@ -459,14 +459,14 @@
                         <input type="checkbox" id="weixinbox">
                         <span class="iconfont icon-check ft12"></span>
                     </div>
-                    <label for="weixinbox">是否发送微信</label>
+                    <label for="weixinbox">发送微信</label>
                 </div>
                 <div class="form-group">
                     <div class="icheckbox_square-blue checked mr5" id="duanxin">
                         <input type="checkbox" id="duanxinbox">
                         <span class="iconfont icon-check ft12"></span>
                     </div>
-                    <label for="duanxinbox">是否发送短信</label>
+                    <label for="duanxinbox">发送短信</label>
                 </div>
             </div>
             <div class="tr mt20">
