--- a/QJY.WEB/ViewV5/AppPage/CCXJ/CCXJVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/CCXJ/CCXJVIEW.html
@@ -5,6 +5,11 @@
 
         var tempindex = avalon.define({
             $id: "CCXJVIEW",
+            CancelWF: function (dataid) {
+                $.getJSON('/API/VIEWAPI.ashx?Action=CCXJ_DELCCXJ', { P1: dataid }, function (resultData) {
+
+                })
+            },//重新更新图书状态
             InitWigetData: function (strId) {
                 model.title = "出差休假";
                 model.ShowColumns.pushArray(
