--- a/QJY.WEB/ViewV5/AppPage/HYGL/HYGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/HYGL/HYGLVIEW.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/ViewV5/CSS/icfont_qj/iconfont.css" />
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/bootstrap3.3.5/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/animate.css">
-
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/index.css">
     <link rel="stylesheet" type="text/css" href="/ViewV5/CSS/default.css">
     <style>
@@ -24,6 +23,9 @@
                     <span class="cur"><i class="iconfont icon-bookmark"></i>会议信息</span>
                     <div class="pr20" style="float: right;">
                         <button class="btn btn-info" ms-if="isEdit=='Y' && nowuser==modelData.CRUser" ms-click="Edit()">编辑</button>
+
+                        <button class="btn btn-info" ms-if="ISCANCEL=='Y'||model.PIMODEL.IsCanceled == 'Y'" id="chehui">撤回到草稿箱</button>
+
                     </div>
                 </div>
             </div>
@@ -107,11 +109,12 @@
         </div>
     </div>
 
+
     <script src="/ViewV5/JS/jquery-1.11.2.min.js"></script>
     <script src="/ViewV5/JS/layer/layer.js"></script>
     <script src="/ViewV5/CSS/bootstrap3.3.5/js/bootstrap.js"></script>
     <script src="/ViewV5/JS/avalon1.47.js"></script>
-    <script src="/ViewV5/JS/SZHLCommon.js?jsver=20160915"></script>
+    <script src="/ViewV5/JS/SZHLCommon.js?jsver=20160929"></script>
     <script src="/ViewV5/JS/YSteps/Steps.js"></script>
     <script type="text/javascript">
         $(".padding20 .lookright-box .menu-general ul li").each(function (i) {
@@ -276,6 +279,30 @@
                     return "";
                 }
             },
+          
+            CancelWF: function () {//撤回表单到草稿箱
+                ComFunJS.winconfirm("确认要撤回此流程吗？", function () {
+                    $.getJSON("/API/VIEWAPI.ashx?ACTION=LCSP_CANCELWF", { P1: model.PIID, DataID: model.strId, ModelCode: "HYGL", P2: model.PIMODEL.PDID }, function (result) {
+                        if (result.ErrorMsg == "") {//流程数据
+
+                            $.post("/API/VIEWAPI.ashx?Action=HYGL_DELHY", { "P1": model.strId }, function (resultData) {
+                                if (result.ErrorMsg == "") {
+                                    model.ISCANCEL = "N";
+                                    top.ComFunJS.winconfirm("操作成功,该表单已撤回到草稿箱,是否要重新发起该表单", function () {
+
+                                        location.href = "/ViewV5/AppPage/APP_ADD_WF.html?FormCode=HYGL&PDID=" + model.PIMODEL.PDID + "&lctype=" + model.lctype;
+                                    }, function () {
+                                        top.layer.closeAll();
+                                    })
+                                }
+                            })
+
+
+                        
+                        }
+                    })
+                }, function () { })
+            },
             getwfdata: function () {
                 $.getJSON("/API/VIEWAPI.ashx?ACTION=LCSP_GETWFDATA", { P1: model.PIID, strId: model.strId, ModelCode: model.FormCode, P2: model.PDID }, function (result) {
                     if (result.ErrorMsg == "") {//流程数据
@@ -374,6 +401,9 @@
 
             model.GetModelData();
             model.getwfdata();
+            $("#chehui").click(function () {
+                model.CancelWF();
+            })
         })
     </script>
 </body>
