--- a/QJY.WEB/WZWeb/index.html
+++ b/QJY.WEB/WZWeb/index.html
@@ -161,6 +161,8 @@
             <div class="btn">
                 <a href="/ViewV5/login.html" target="_blank" class="mobile_hide">立即体验</a>
                 <a id="submitBug" href="http://git.oschina.net/qikj/QJ_Single" class="video" target="_blank">下载源码</a>
+                <a id="submitBug" href="http://qjkj.mydoc.io/" class="video" target="_blank">帮助文档</a>
+
             </div>
         </div>
         <div class="banner">
